--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,20 @@
 {
   "scripts": {
-    "dev": "ts-node index.ts",
+    "dev": "ts-node ./src/index.ts",
     "start": "tsc && node ./dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
