--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.3.1",
+    "sequelize": "^6.31.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
+    "@types/sequelize": "^4.28.15",
     "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
     "supertest": "^6.3.3",
