--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,29 @@
-version: '3.1'
-
+version: '3'
+ 
 services:
-
   db:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
+    image: mysql:5.7
+    container_name: db
     environment:
-      MYSQL_ROOT_PASSWORD: 0123456
-
-  adminer:
-    image: adminer
+      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_DATABASE: investnow
+      MYSQL_USER: fullzer4
+      MYSQL_PASSWORD: 123456
+    ports:
+      - "6033:3306"
+    volumes:
+      - dbdata:/var/lib/mysql
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: pma
+    links:
+      - db
+    environment:
+      PMA_HOST: db
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
     restart: always
     ports:
-      - 8080:8080
+      - 8081:80
+volumes:
+  dbdata:
