--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "ts-node ./src/index.ts",
-    "start": "tsc && node ./dist/index.js",
+    "start": "tsc && node ./dist/src/index.js",
     "build": "tsc",
     "test": "jest"
   },
