--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "^18.2.6",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
@@ -19,16 +20,15 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@tsconfig/react-native": "^3.0.1",
     "@types/jest": "^29.5.1",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "typescript": "^5.0.4"
+    "@types/react-test-renderer": "^18.0.0"
   },
   "resolutions": {
     "metro": "^0.73.7",
