--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
+  "license": "MIT",
   "scripts": {
     "dev": "ts-node ./src/index.ts",
     "start": "tsc && node ./dist/src/index.js",
-    "build": "tsc",
-    "test": "jest"
+    "build": "tsc"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -12,12 +12,6 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.1",
-    "@types/sequelize": "^4.28.15",
-    "@types/supertest": "^2.0.12",
-    "jest": "^29.5.0",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
